답변작성, 추천시 해당 댓글로 스크롤 이동