@@ -31,17 +31,18 @@ public class AnswerController {
     public String createAnswer(Principal principal, Model model, @PathVariable("id") Integer id,
                                @Valid AnswerForm answerForm, BindingResult bindingResult) {
         Question question = questionService.getQuestion(id);
+        SiteUser siteUser = userService.getUser(principal.getName());
         if (bindingResult.hasErrors()){
             model.addAttribute("question", question);
                     return "question_detail";
         }
-        SiteUser siteUser = userService.getUser(principal.getName());
 
         // 답변 등록 시작
-        answerService.create(question, answerForm.getContent(), siteUser);
+        Answer answer = answerService.create(question, answerForm.getContent(), siteUser);
         // 답변 등록 끝
 
-        return "redirect:/question/detail/%d".formatted(id);
+        return String.format("redirect:/question/detail/%s#answer_%s",
+                answer.getQuestion().getId(), answer.getId());
     }
 
     @PreAuthorize("isAuthenticated()")
@@ -71,7 +72,8 @@ public class AnswerController {
 
         answerService.modify(answer, answerForm.getContent());
 
-        return "redirect:/question/detail/%d".formatted(answer.getQuestion().getId());
+        return String.format("redirect:/question/detail/%s#answer_%s",
+                answer.getQuestion().getId(), answer.getId());
     }
 
     @PreAuthorize("isAuthenticated()")
@@ -94,8 +96,11 @@ public class AnswerController {
     public String answerVote(Principal principal, @PathVariable("id") Integer id) {
         Answer answer = answerService.getAnswer(id);
         SiteUser siteUser = userService.getUser(principal.getName());
+
         answerService.vote(answer, siteUser);
-        return String.format("redirect:/question/detail/%s", id);
+
+        return String.format("redirect:/question/detail/%s#answer_%s",
+                answer.getQuestion().getId(), answer.getId());
     }
 
 }
